<resources>
    <string name="app_name">ReclamoWow</string>
    <string name="action_settings">Settings</string>


    <string name="register_text">Registar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_title">Reclamo WOW</string>
    <string name="button_1">Reclamar</string>
    <string name="button_2">Consultar</string>

    <!--REGISTER VIEW-->
    <string name="register_title">Registra tu reclamo</string>
    <string name="register_subtitle">Por favor, completa los siguientes campos para registrar tu reclamo:</string>
    <string name="register_submit">Enviar reclamo</string>
    <string name="document_type_label">Tipo de documento</string>
    <string name="document_number_label">Número de documento</string>
    <string name="phone_number_label">Número de celular</string>
    <string name="email_label">Correo electrónico</string>
    <string name="date_label">Fecha del incidente</string>
    <string name="type_label">Tipo de reclamo</string>
    <string name="detail_label">Detalle del reclamo</string>

    <!--SEARCH VIEW-->
    <string name="search_title">Consulta tu reclamo</string>
    <string name="search_submit">Buscar reclamo</string>
    <string name="document_option">Buscar por documento</string>
    <string name="id_option">Buscar por código</string>
    <string name="initial_date">Fecha de recepción de reclamo:</string>
    <string name="final_date">Fecha de resolución:</string>
    <string name="add_comment">Agregar un comentario</string>
    <string name="complaint_id_label">Código de reclamo</string>

    <!--SUCCESS VIEW-->
    <string name="success_title">¡Muchas gracias por la información!</string>
    <string name="success_subtitle">No olvides anotar tu código de reclamo para poder darle seguimiento.</string>
    <string name="estimated_final_date">Fecha máxima de resolución:</string>
    <string name="state_label">Estado:</string>
    <string name="comment_label">Comentario:</string>
    <string name="comment_detail">Si deseas, puedes añadirle un comentario a tu reclamo aquí:</string>
    <string name="comment_submit">Agregar comentario</string>
</resources>